--- a/facebook/app/views/posts/index.html.erb
+++ b/facebook/app/views/posts/index.html.erb
@@ -3,13 +3,17 @@
 <table>
   <tr>
     <th>Title</th>
-    <th>Text</th>
+    <th>Description</th>
+    <th>Link</th>
+    <th>Message</th>
   </tr>
  
   <% @posts.each do |post| %>
     <tr>
       <td><%= post.title %></td>
-      <td><%= post.text %></td>
+      <td><%= post.description %></td>
+      <td><%= post.link %></td>
+      <td><%= post.message %></td>
     </tr>
   <% end %>
 </table>
