--- a/facebook/app/views/posts/new.html.erb
+++ b/facebook/app/views/posts/new.html.erb
@@ -7,10 +7,20 @@
   </p>
  
   <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
   </p>
- 
+
+  <p>
+    <%= f.label :link %><br>
+    <%= f.text_area :link %>
+  </p>
+
+  <p>
+    <%= f.label :message %><br>
+    <%= f.text_area :message %>
+  </p>
+
   <p>
     <%= f.submit %>
   </p>
